tests/negative/gold/lock_sdk_bad/lock-sdk-bad-test.gold
<...>/tests/negative/lock_sdk_bad/package.lock:1:6: error: SDK constraint must be of form '^version': '1.0.9'
sdk: 1.0.9
     ^~~~~
Compilation failed.
